<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.app.fitv1.LoginViewModel" />

        <variable
            name="handler"
            type="com.app.fitv1.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15sp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dp"
                android:text="@string/sign_in_manually"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_stroke"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:paddingStart="20sp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:paddingTop="10sp"
                android:paddingEnd="20sp"
                android:paddingBottom="10sp"
                android:text="@={data.email}" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_stroke"
                android:hint="@string/password"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:drawableStart="@drawable/password"
                android:drawablePadding="15dp"
                android:text="@={data.password}"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="20sp"
                android:paddingTop="10sp"
                android:paddingEnd="20sp"
                android:paddingBottom="10sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/default_btn_selector"
                android:text="@string/sign_in"
                android:onClick="@{(v) -> handler.onClick(v)}"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/btnSize" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:onClick="@{(v) -> handler.onClick(v)}"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sign_up"
                    android:onClick="@{(v) -> handler.onClick(v)}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>