<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSkipForNow"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="15sp"
            android:layout_marginRight="15sp"
            android:background="@drawable/btn_selector"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingEnd="20sp"
            android:text="@string/skip_for_now"
            android:textAllCaps="false"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dots_margin_bottom"
        android:layout_marginLeft="@dimen/dots_margin_bottom"
        android:layout_marginBottom="@dimen/dots_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:text="@string/skip"
        android:textColor="@android:color/white"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:id="@+id/llLoginOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:background="@drawable/btn_selector"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="@dimen/btnSize"
                tools:ignore="RtlHardcoded" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:background="@drawable/default_btn_selector"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/btnSize"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <Button
            android:id="@+id/btnFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_selector_fb"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/btnSize" />

    </LinearLayout>

</RelativeLayout>