<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.app.fitv1.ForgetPasswordViewModel" />

        <variable
            name="handler"
            type="com.app.fitv1.ForgetPasswordViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15sp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15dp"
                android:text="@string/enter_your_registered_email_to_reset_your_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_stroke"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:paddingStart="20sp"
                android:paddingTop="10sp"
                android:paddingEnd="20sp"
                android:paddingBottom="10sp"
                android:text="@={data.email}" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/default_btn_selector"
                android:text="@string/submit"
                android:onClick="@{(v) -> handler.onClick(v)}"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/btnSize" />

        </LinearLayout>
    </ScrollView>

</layout>